changes to frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,6 +29,7 @@
             </nav>
             <div class="auth-buttons">
                 <button class="btn btn-primary" id="connectToMetamask">Connect To Metamask</button>
+                <button class="btn btn-secondary" id="disconnectFromMetamask">Disconnect</button>
             </div>
         </div>
     </header>
