--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
                 <div class="user-profile">
             <div class="user-avatar">LRA</div>
                     <div class="user-info">
-                        <h3>Lakshiyta Warikoo</h3>
+                        <h3>John Doe</h3>
                         <p>Verified User</p>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                                 <i class="fas fa-award"></i>
                             </div>
                         </div>
-                        <div class="stat-value">45</div>
+                        <div class="stat-value" id="rewards">45</div>
                         <div class="stat-label">Points earned</div>
                     </div>
                 </div>
